Inserted images and fixed alignments

--- a/Solution1/css/backToTopButton.css
+++ b/Solution1/css/backToTopButton.css
@@ -1,7 +1,7 @@
 #scroll-top-link{
 	position: absolute;
 	bottom: -35px;
-	left: 45%;
+	left: 46%;
 	z-index: 12;
 	display: inline-block;
 }
