--- a/Solution1/css/scrollDownButton.css
+++ b/Solution1/css/scrollDownButton.css
@@ -1,7 +1,7 @@
 #scroll-down-link{
 	position: absolute;
 	bottom: -35px;
-	left: 45%;
+	left: 46%;
 	z-index: 12;
 	display: inline-block;
 }
